--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -15,7 +15,7 @@
 }
 
 .social_list svg {
-  @apply text-2xl font-bold  hover:text-yellow-400 cursor-pointer;
+  @apply text-2xl font-bold duration-500 hover:text-yellow-400 cursor-pointer;
 }
 
 .text {
