--- a/src/components/layout/NavBar.module.css
+++ b/src/components/layout/NavBar.module.css
@@ -11,9 +11,13 @@
 }
 
 .item{
-    @apply text-white mr-4 font-bold ;
+    @apply text-white mr-4 font-bold;
 }
 
 .item a{
     @apply duration-500 hover:text-yellow-400;
+}
+
+.navbar img{
+  @apply flex
 }
